# CCBlade

./: .buildinfo  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  csystem.html  documentation.html  environment.yml  genindex.html  index.html  installation.html  intro.html  meson.build  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  theory.html  tutorial.html
.github/workflows/: CI_CCBlade.yml
_modules/: ccblade.html  index.html
_sources/: tutorial.txt
ccblade/: airfoilprep.py  ccblade.py  ccblade_component.py  meson.build
docs/: conf.py  installation.rst
docs/examples/: example.py  gradients.py
docs/nrel-theme/static/: nrel.css_t
src/: .gitignore  airfoilprep.py  bem.f90  ccblade.py  test_ccblade.py  test_gradients.py
src/ccblade/: __init__.py  bem.f90  ccblade.py  ccblade_component.py
test/: test_airfoilprep.py  test_ccblade.py  test_gradients.py  test_om_gradients.py
